# Physical-AI-Book

./: $null  .gitignore  404.html  README.md  index.html  sitemap.xml
.specify/memory/: constitution.md
assets/css/: styles.91424109.css
assets/js/: 01a85c17.b52e0e56.js  0a317669.885144dd.js  0a317669.8d3f13b3.js  0e384e19.54733d48.js  0e384e19.5a4bfc53.js  0e384e19.61dd30a0.js  0e384e19.89e0d70e.js  0e4f89af.0df5f95e.js  0e4f89af.3da078d0.js  0e4f89af.4744c23a.js  14b7a60a.15727e48.js  14b7a60a.287b1c7c.js  14b7a60a.5943b8e8.js  17896441.f75c1e1d.js  18c41134.27446ee1.js  18c41134.6eb21683.js  1df93b7f.2627a2c9.js  1df93b7f.f0e06553.js  1e4232ab.8245ad84.js  1e4232ab.d0b688f5.js  1f391b9e.64be1ee6.js  2237.b4432a8f.js  239d939e.8030df35.js  239d939e.d2997cd5.js  25893bca.811e102d.js  25893bca.fa1be7df.js  3269.e0074613.js  (+131 more)
backend/: agent.py  api.py  main.py  pyproject.toml  rag_service.py  requirements.txt  retrieving.py  start_api.py  test_api.py  test_connectivity.py
backend/src/: main.py
backend/src/ai_services/: embedding_service.py  response_service.py  retrieval_service.py
backend/src/api/: auth.py  book_content.py  chat.py  user.py
backend/src/database/: models.py  session.py
backend/src/middleware/: error_handler.py
backend/src/models/: book_content.py  bookmark.py  chat_response.py  user.py  user_query.py
backend/src/services/: book_content_service.py  bookmark_service.py
backend/src/utils/: config.py  logger.py
blog/: atom.xml  index.html  rss.xml
frontend/: docusaurus.config.js  package.json  sidebars.js
markdown-page/: index.html
(+73 files in other folders)
