[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agents>=1.4.0",
    "cohere>=5.20.1",
    "dotenv>=0.9.9",
    "openai>=1.102.0",
    "openai-agents>=0.2.10",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
